--- a/css/style.scss
+++ b/css/style.scss
@@ -520,6 +520,18 @@
         background: url(../image/Ap_bg1.png)no-repeat;
         background-size: cover;
         background-position: center;
+       //@debug position: relative;
+        // z-index: 3;
+        // &::before{
+        //     content: '';
+        //     width: 100%;
+        //     height: 100%;
+        //     background: $red;
+        //     position: absolute;
+        //     left:0;
+        //     top:0;
+        //     z-index: -1;
+        // }
         .Appointment_Content{
             @include flex;
             justify-content: space-between;
@@ -577,7 +589,12 @@
                     margin: 1.4rem 0 0;
                     border-radius: 100px;
                     box-shadow: 0px 3px 3px 2px #000;
-                
+                    transition: $transition;
+                    &:active,&:focus{
+                        //box-shadow: 0px 1px 1px 1px #000;
+                        transition: $transition;
+                        box-shadow: inset 0px 0px 9px 0px #000;
+                    }
                 }
             }
         }
