--- a/css/style.css
+++ b/css/style.css
@@ -870,6 +870,7 @@ main .Appointment_Wrapper .Appointment_child {
   background: url(../image/Ap_bg1.png) no-repeat;
   background-size: cover;
   background-position: center;
+  z-index: 3;
 }
 
 main .Appointment_Wrapper .Appointment_child .Appointment_Content {
@@ -958,5 +959,562 @@ main .Appointment_Wrapper .Appointment_child .Appointment_Content .Apt_Cmn01 a:a
   transition: all 0.3s ease-in-out;
   -webkit-box-shadow: inset 0px 0px 9px 0px #000;
           box-shadow: inset 0px 0px 9px 0px #000;
+}
+
+main .Testimonial_Wrapper {
+  padding: 2rem 0 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+main .Testimonial_Wrapper::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: url(../image/bg1.png) no-repeat;
+  background-size: contain;
+  position: absolute;
+  z-index: -1;
+  z-index: -1;
+  -webkit-animation: Bganime 30s linear infinite;
+          animation: Bganime 30s linear infinite;
+  animation-direction: reverse;
+}
+
+main .Testimonial_Wrapper .Testimonial_heading h2 {
+  font-size: 2.3em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+main .Testimonial_Wrapper .Testimonial_heading h2 span {
+  color: #F73624;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+  padding: 4rem 0 0;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul li.Tst02.Tst_cmn02 {
+  margin: 0.5rem 1rem 2rem 8rem !important;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst01 img {
+  -o-object-position: right !important;
+     object-position: right !important;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 {
+  width: 40%;
+  list-style-type: none;
+  padding: 1rem 1rem;
+  text-align: center;
+  border: 2px solid #F73624;
+  margin: 0.5rem 1rem 2rem;
+  border-radius: 5px;
+  position: relative;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 figure {
+  position: absolute;
+  left: -97px;
+  top: -13px;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  /* border: 2px solid; */
+  overflow: hidden;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 figure img {
+  max-width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 p {
+  font-size: 1em;
+  line-height: 1.6;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  padding: 0 0 1rem 2.8rem;
+}
+
+main .Testimonial_Wrapper .Testimonial_Content ul .Tst_cmn02 h2 {
+  font-size: 1.3em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: capitalize;
+  color: #000;
+  font-weight: 590;
+}
+
+@-webkit-keyframes Bganime {
+  0% {
+    background-position-x: -640px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    opacity: .98;
+  }
+  50% {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-position-x: 340px;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    background-position-x: 1140px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+@keyframes Bganime {
+  0% {
+    background-position-x: -640px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    opacity: .98;
+  }
+  50% {
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-position-x: 340px;
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  100% {
+    background-position-x: 1140px;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+main .Appointment_Form_wrp {
+  position: relative;
+  overflow: hidden;
+  padding: 1rem 0 0;
+}
+
+main .Appointment_Form_wrp::after {
+  content: '';
+  width: 74%;
+  height: 131%;
+  right: -394px;
+  top: -147px;
+  background: url(../image/bg1.png) no-repeat;
+  background-size: contain;
+  position: absolute;
+  z-index: -1;
+}
+
+main .Appointment_Form_wrp .Apt_heading img {
+  max-width: 35%;
+  -webkit-animation: imganime 3s linear infinite;
+          animation: imganime 3s linear infinite;
+}
+
+main .Appointment_Form_wrp .Apt_heading h2 {
+  font-size: 2.3em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 2rem 0 1rem;
+  width: 90%;
+  margin: 0 auto;
+}
+
+main .Appointment_Form_wrp .Apt_heading h2 span {
+  color: #F73624;
+}
+
+@-webkit-keyframes imganime {
+  0%, 100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+}
+
+@keyframes imganime {
+  0%, 100% {
+    -webkit-transform: translateY(-5px);
+            transform: translateY(-5px);
+  }
+  50% {
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
+  }
+}
+
+main .Appointment_Form_wrp .Form_wrp {
+  width: 100%;
+}
+
+main .Appointment_Form_wrp .Form_wrp form {
+  width: 90%;
+  margin: 0 auto;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 {
+  width: 23%;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 label {
+  padding: .7rem 0;
+  font-size: 1em;
+  line-height: 1.5;
+  word-spacing: 1px;
+  text-transform: uppercase;
+  margin: 0 .5rem;
+  display: inline-block;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input::-webkit-outer-spin-button,
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input, main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 select {
+  width: 100%;
+  border: 1px solid #a3a3a3;
+  color: #000;
+  text-transform: capitalize;
+  padding: .8rem 1rem;
+  margin: .5rem .5rem;
+  border-radius: 5px;
+  outline: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input:focus, main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 select:focus {
+  -webkit-box-shadow: 0 0 3px 2px #0000001f;
+          box-shadow: 0 0 3px 2px #0000001f;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-animation: focus .4s;
+          animation: focus .4s;
+}
+
+@-webkit-keyframes focus {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+@keyframes focus {
+  0% {
+    -webkit-transform: scale(0.95);
+            transform: scale(0.95);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 select {
+  color: #999 !important;
+  cursor: pointer;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input[type="submit"] {
+  margin: 2.9rem .5rem 0 !important;
+  background: #F73624;
+  outline: none;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  color: #fff;
+  border: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+main .Appointment_Form_wrp .Form_wrp form .form_content .Frm_cmn01 input[type="submit"]:hover {
+  background: #000;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  border-radius: 100px;
+}
+
+main footer {
+  background: #f73624d6;
+  margin: 6rem 0 0;
+  position: relative;
+}
+
+main footer::before {
+  content: '';
+  width: 100%;
+  height: 100%;
+  background: url(../image/Ap_bg3.png) no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  z-index: -1;
+}
+
+main footer .mid-logo {
+  width: 100%;
+  text-align: center;
+  padding: 0 0 4rem;
+}
+
+main footer .mid-logo figure img {
+  max-width: 18%;
+}
+
+main footer .footer_content {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: inherit;
+      -ms-flex-align: inherit;
+          align-items: inherit;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main footer .footer_content .Ft04 li p:first-child {
+  font-family: 'open-sans';
+}
+
+main footer .footer_content .Ft_cmn01 h2 {
+  font-size: 1.6em;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  color: #fff;
+  padding: 0 0 .8rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  border-bottom: 2px solid #fff;
+  display: inline-block;
+}
+
+main footer .footer_content .Ft_cmn01 ul {
+  padding: 1rem 0 0;
+}
+
+main footer .footer_content .Ft_cmn01 ul li {
+  list-style-type: none;
+  padding: .5rem 0;
+}
+
+main footer .footer_content .Ft_cmn01 ul li a {
+  font-size: 1em;
+  line-height: 1.7;
+  color: #fff;
+  text-transform: capitalize;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  display: inline-block;
+  padding: 0 0 .3rem;
+}
+
+main footer .footer_content .Ft_cmn01 ul li a:hover {
+  -webkit-transform: translateX(8px);
+          transform: translateX(8px);
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main footer .footer_content .Ft_cmn01 ul li .hvr-underline-from-left::before {
+  background: #fff;
+  height: 1px;
+}
+
+main footer .footer_content .Ft_cmn01 ul li p {
+  color: #fff;
+  font-size: 1.1em;
+  padding: .5rem 0;
+}
+
+main footer .footer_content .Ft_cmn01 ul li p i {
+  padding: 0 .5rem 0 0;
+}
+
+main footer .footer_content .Ft_cmn01 .social_wrp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+main footer .footer_content .Ft_cmn01 .social_wrp li i {
+  font-size: 1.6em;
+  padding: 0.5rem 0.5rem;
+  margin: 0 .6rem 0 0;
+  color: #fff;
+  vertical-align: middle;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+main footer .footer_content .Ft_cmn01 .social_wrp li i:hover {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  background: #ffffff59;
+  border-radius: 50%;
+  color: #fff;
+}
+
+main footer .footer_content .Ft_cmn01 .subscribe h3 {
+  font-size: 1.4em;
+  text-transform: capitalize;
+  line-height: 1.5;
+  word-spacing: 1px;
+  letter-spacing: 1px;
+  padding: 1rem 0;
+  color: #fff;
+}
+
+main footer .footer_content .Ft_cmn01 .subscribe label {
+  width: 100%;
+}
+
+main footer .footer_content .Ft_cmn01 .subscribe label input {
+  width: 100%;
+  color: #fff;
+  padding: .8rem 1rem;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+main footer .footer_content .Ft_cmn01 .subscribe label input:focus {
+  -webkit-box-shadow: 0 0 3px 2px #0000001f;
+          box-shadow: 0 0 3px 2px #0000001f;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-animation: focus .4s;
+          animation: focus .4s;
+}
+
+main footer .footer_content .Ft_cmn01 .subscribe label #Submit2 {
+  width: 100%;
+  background: #000;
+  font-size: 1.2em;
+  text-transform: uppercase;
+  border: none;
+  margin: 1rem 0 0;
+  cursor: pointer;
+}
+
+main footer .copyright_wrp {
+  padding: 1.5rem 0;
+  margin: 3rem 0 0;
+  background: rgba(0, 0, 0, 0.452);
+}
+
+main footer .copyright_wrp .copy_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+main footer .copyright_wrp .copy_content p {
+  font-size: 13px;
+  line-height: 1px;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: capitalize;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
